adding copyright footer

--- a/index.html
+++ b/index.html
@@ -191,5 +191,14 @@
             <a>Help</a>
         </ul>
     </div>
+
+    <div class="footer-pannel3">
+        <div class="logo"></div>
+    </div>
+
+    <div class="footer-pannel4">
+        <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
+    </div>
+
 </footer>
 </html>
